<resources>
    <string name="app_name">SIAGC Proyecto</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="siag">SIAGC</string>
    <string name="nombreSistema">Sistema de información para la administración ganadera - Combita</string>
    <string name="registro">Ingresar:</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnSalir">Salir</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="nombreVeterinario">Nombre del veterinario</string>
    <string name="telefono">telefono</string>
</resources>
