<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <android.support.v7.widget.AppCompatImageView
        android:layout_width="270dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/siagprincipal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="5dp"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreSistema"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="5dp"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textSize="14sp"

        android:layout_margin="5dp"
        />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:textSize="20sp"

        android:layout_margin="5dp"
        />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_margin="5dp"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"

        >
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnIngresar"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSalir"
            />

    </android.support.v7.widget.LinearLayoutCompat>



</android.support.v7.widget.LinearLayoutCompat>